# www.pax.dev

./: .gitignore  Cargo.toml  deploy.prod.sh  deploy.sh  deploy.staging.sh  pax
public/: .gitignore  index.html  mobile.html  package.json
src/: calculator.pax  lib.pax  lib.rs
