[package]
name = "www-pax-dev"
version = "0.36.3"
edition = "2021"
default-run = "run"

[dependencies]
pax-kit = { version = "0.36.3", path="../pax/pax-kit"}
fireworks = { version = "0.36.3", path="../pax/examples/src/fireworks" }
color-picker = { version = "0.36.3", path="../pax/examples/src/color-picker" }
breakout = { version = "0.36.3", path="../pax/examples/src/breakout" }
space-game = { version = "0.36.3", path="../pax/examples/src/space-game" }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "parser"
path = "src/lib.rs"
required-features = ["parser"]

[[bin]]
name = "run"
path = "bin/run.rs"

[features]
default = ["designer"]
designer = ["pax-kit/designer"]
parser = ["pax-kit/parser", "fireworks/parser", "color-picker/parser", "breakout/parser", "space-game/parser"]
web = ["pax-kit/web"]
macos = ["pax-kit/macos"]
ios = ["pax-kit/ios"]

[profile.parser]
inherits = "dev"
opt-level = 0

[profile.parser.package."*"]
inherits = "dev"
opt-level = 0

[profile.dev]
opt-level = 0
debug = false

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = 3
lto = "thin"


